--- a/todo_list.html
+++ b/todo_list.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Todo List</title>
-    <link rel="stylesheet" href="css/12-todo-list.css">
+    <link rel="stylesheet" href="todo_list.css">
   </head>
   <body>
     <p>Todo List</p>
@@ -17,6 +17,6 @@
 
     <div class="js-todo-list todo-grid"></div>
 
-    <script src="scripts/12-todo-list .js"></script>
+    <script src="todo_list.js"></script>
   </body>
 </html>
