--- a/Calculator.html
+++ b/Calculator.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-   <link rel="stylesheet" href="css/10i.css">
+   <link rel="stylesheet" href="Calculator.css">
   </head>
   <body>
     <!-- Create an element to display the calculation. -->
@@ -97,7 +97,7 @@
       ">Clear</button>
     </p>
 
-    <script src="scripts/10i.js">
+    <script src="Calculator.js">
       
     </script>
   </body>
